test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_do_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  void
  identifier(f)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  do
  {
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  ;
  }
  while
  (
  identifier(f)
  (
  )
  )
  ;
  return
  const int(0)
  ;
  }
